# full-stack-reasonml-advanced-sample

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dune-project  full-stack-reasonml-advanced-sample.opam  jest.config.js  package.json  webpack.config.js
.github/workflows/: deploy.yml
assets/: index.css
docs/: analize.html  report.html
src/client/: Routes_handler.re  app.re  dune
src/server/: Routes_build.re  dune  server.re
src/universal/js/: dune
src/universal/js/client-bidings/: Bindings_Dream.re  Bindings_Fetch.re  Bindings_Float.re  Bindings_Js.re  Bindings_Json.re
src/universal/native/: dune
src/universal/native/lib/: Bindings.re  Components.re  DynamicRouting.re  Hooks.re  Pages.re  Services.re  Utils.re
src/universal/native/lib/Bindings/: Bindings_Event.re  Bindings_WebApi.re
src/universal/native/lib/Components/: Components_Button.re  Components_Head.re  Components_Highlight.re  Components_Layout.re  Components_Loader.re  Components_TopBar.re
src/universal/native/lib/Hooks/: Hooks_useClickOutsideHandler.re  Hooks_useFetch.re
src/universal/native/lib/Pages/: Pages_Home.re  Pages_Pokemon.re  Pages_Portal.re
src/universal/native/lib/Services/: Services_GetPokemon.re
src/universal/native/native-bidings/: Bindings_Dream.re  Bindings_Fetch.re  Bindings_Float.re  Bindings_Js.re  Bindings_Json.re
src/universal/test/: Utils_test.re  dune
templates/: index.html
