opam-version: "2.0"
maintainer: ["Pedro B S Lisboa <pedrobslisboa@gmail.com>"]
authors: ["Pedro B S Lisboa <pedrobslisboa@gmail.com>"]
synopsis: "Fullstack ReasonML project sample with server-side rendering"
description: ""
homepage: "https://example.com/project-homepage"
bug-reports: "https://example.com/project-homepage/issues"
license: "MIT"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "5.0.0"}
  "reason" {>= "3.11.0"}
  "melange"
  "dream"
  "lambdasoup"
  "reason-react-ppx"
  "reason-react"
  "server-reason-react"
  "universal-portal"
  "styled-ppx"
  "quickjs"
  "yojson"
  "lwt" {>= "5.7.0"}
  "cohttp-lwt-unix" {>= "5.3.1"}
  "fmt" {with-test}
  "user-setup" {with-test}
  "ocamlformat" {= "0.26.1" & with-test}
  "melange-testing-library" {with-test}
  "melange-jest" {with-test}
  "ocaml-lsp-server" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  ["quickjs.0.1.1" "git+https://github.com/ml-in-barcelona/quickjs.ml#0.1.1"]
  ["reason-react.0.14.0" "git+https://github.com/reasonml/reason-react#0.14.0"]
  ["reason-react-ppx.0.14.0" "git+https://github.com/reasonml/reason-react#0.14.0"]
  ["server-reason-react.0.2.0" "git+https://github.com/ml-in-barcelona/server-reason-react#0.2.0"]
  ["reason.3.11.0" "git+https://github.com/reasonml/reason#3.11.0"]
  ["universal-portal.0.2.0" "git+https://github.com/pedrobslisboa/universal-portal#0.2.0"]
  ["styled-ppx.0.56.0" "git+https://github.com/davesnx/styled-ppx#923c9abcf6ef2d64fe83e15cc632fb6e7cab8503"]
]
